--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     </head>
     <body>
         <script src="thread.js"></script>
-        <h1>Thread tooth profile calculator</h1>
+        <div style="text-align: center;"><h1>Thread tooth profile calculator</h1></div>
         <br>
-        <div style="display: flex;">
+        <div id="cont">
+            <div>
             <div id="set" class="panel" style="height: 17em;">
                 <form>
                 <label>Standard:</label>
@@ -56,6 +57,10 @@
                 </datalist>
                 </form>
             </div>
+            <div class="panel" id="eximg">
+                <img src="gt.png" alt="example" width="175px" height="240px;">
+            </div>
+            </div>
             <div id="resultn" class="panel" >
                 <div id="img1">                    
                 </div>
@@ -64,6 +69,8 @@
                 <div id="img2">                    
                 </div>
             </div>
+            <br>
+            
         </div>
     </body>
 </html>
