Added readme link

--- a/index.html
+++ b/index.html
@@ -72,5 +72,8 @@
             <br>
             
         </div>
+        <p style="text-align: center;">How to use - view the <a href="https://github.com/bigbigmdm/Freecad_thread_calculator/blob/main/README.md" target="_blank">readme</a>.</p>
+        <p style="text-align: center;">Created in 2024 by <a href="https://github.com/bigbigmdm" target="_blank">Mikhail Medvedev</a>.</p>    
+
     </body>
 </html>
