Inch-mode added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <form>
                 <label>Standard:</label>
                 <br>
-                <b>Metric</b>
+                <b>Metric </b><a href="inch.html"><img alt="inch" src="img/switch0.png"></a><b> Inch</b>
                 <br>
                 <br>
                 <label for="size" >Thread size</label>
@@ -74,6 +74,5 @@
         </div>
         <p style="text-align: center;">How to use - view the <a href="https://github.com/bigbigmdm/Freecad_thread_calculator/blob/main/README.md" target="_blank">readme</a>.</p>
         <p style="text-align: center;">Created in 2024 by <a href="https://github.com/bigbigmdm" target="_blank">Mikhail Medvedev</a>.</p>    
-
     </body>
 </html>
