Button position corrected

--- a/inch.html
+++ b/inch.html
@@ -37,8 +37,7 @@
                     <input id="stepi" type="text" name="Thread_step" size="6" maxlength="5" value="1.814"> mm
                   </div>
                 </div>
-            <br>
-            <input type="button" value="Calculate" onclick="icalcthread()">
+            <input type="button" id="ires" value="Calculate" onclick="icalcthread()">
                 </form>
             </div>
             <div class="panel" id="eximg">
