--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                   <input id="step" type="text" name="Thread_step" size="6" maxlength="5" value="1.5"> mm
                   <input type="button" id="ti" value="▲" onclick="tinc()">
                 </div>
-                <br>
-                <input type="button" value="Calculate" onclick="calcthread()">
+                <input type="button" id="mres" value="Calculate" onclick="calcthread()">
                 <datalist id="sval">
                    <option value="10" label="10"></option>
                    <option value="20" label="20"></option>
